apps/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        k8up.io/backup: "true"
    spec:
      containers:
        - name: hello-world
          image: alpine:3.24
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /www
              echo "hello world" > /www/index.html
              apk add --no-cache darkhttpd > /dev/null 2>&1
              darkhttpd /www --port 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /www
              name: hello-world-data-local
      restartPolicy: Always
      volumes:
        - name: hello-world-data-local
          persistentVolumeClaim:
            claimName: hello-world-data-local
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
